--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -1,12 +1,42 @@
 name: Zotero Android CI
 
-on: workflow_dispatch
-
+on:
+  schedule:
+    - cron: "0 0 * * 0"  # Runs once a week (Sunday at midnight)
+  workflow_dispatch:
+  
 jobs:
-  build:
-
+  sync-upstream:
     runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+        with:
+          submodules: recursive
 
+      - name: Add Upstream Repository
+        run: |
+          git remote add upstream https://github.com/zotero/zotero-android.git
+          git fetch upstream
+          git checkout master
+
+      - name: Configure Git User
+        run: |
+          git config --global user.name "github-actions[bot]"
+          git config --global user.email "41898282+github-actions[bot]@users.noreply.github.com"
+
+      - name: Merge Changes from Upstream
+        run: |
+          git merge --no-edit -X theirs upstream/master
+          git reset .github/workflows/  # Make sure no workflow files are staged
+          
+      # Push merged changes to fork
+      - name: Push Changes to Fork
+        run: |
+          git push origin master
+
+  build:
+    runs-on: ubuntu-latest
+    needs: sync-upstream
     steps:
       - uses: actions/checkout@v4
         with:
@@ -23,9 +53,6 @@ jobs:
         uses: actions/setup-python@v5
         with:
           python-version: '3.10'
-
-      - name: Writing PSPDFKIT's key into a file
-        run: echo ${{ secrets.PSPDFKIT_KEY }} | sed 's/./& /g' > pspdfkit-key.txt
 
       - name: Grant execute permission for bundle_translators.py
         run: chmod +x scripts/bundle_translators.py
@@ -46,9 +73,10 @@ jobs:
       - name: Build the app without remote credentials
         run: ./gradlew assembleDebug --no-configuration-cache -PpreDexLibs=false --stacktrace
 
-      # Upload the generated APK if it exists
-      - name: Upload APK Release - ${{ env.repository_name }}
-        uses: actions/upload-artifact@v3
+      - name: Create Release
+        uses: ncipollo/release-action@v1
         with:
-          name: ${{ env.date_today }} - ${{ env.repository_name }} - APK(s) release generated
-          path: app/build/outputs/apk/debug/app-debug.apk
+          tag: nightly-tag-${{ steps.date.outputs.date }}
+          name: nightly-release-${{ steps.date.outputs.date }}
+          body: Built automatically from https://github.com/zotero/zotero-android
+          artifacts: app/build/outputs/apk/debug/app-debug.apk
