--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -11,8 +11,7 @@ jobs:
     steps:
       - uses: actions/checkout@v4
         with:
-          token: ${{ secrets.GITHUB_TOKEN }}
-          submodules: recursive
+          fetch-depth: 0
 
       - name: Add Upstream Repository
         run: |
