--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -26,7 +26,7 @@ jobs:
 
       - name: Merge Changes from Upstream
         run: |
-          git merge --no-edit --allow-unrelated-histories -X theirs upstream/master
+          git merge --allow-unrelated-histories -X theirs upstream/master
           git reset .github/
           
       # Push merged changes to fork
