--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -77,7 +77,7 @@ jobs:
         run: echo "NOW=$(date +'%Y-%m-%d')" >> $GITHUB_ENV
 
       - name: ls
-        run: ls app/build/outputs/apk/debug
+        run: echo 'ARTIFACTS=$(find "$directory" -type f -name "*.apk")' >> $GITHUB_ENV 
         
       - name: Create Release
         uses: ncipollo/release-action@v1
@@ -85,4 +85,4 @@ jobs:
           tag: nightly-tag-${{ env.NOW }}
           name: nightly-release-${{ env.NOW }}
           body: Built automatically from https://github.com/zotero/zotero-android
-          artifacts: app/build/outputs/apk/debug/app-debug.apk
+          artifacts: ${{ env.ARTIFACTS }}
