--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -77,12 +77,11 @@ jobs:
         run: echo "NOW=$(date +'%Y-%m-%d')" >> $GITHUB_ENV
 
       - name: ls
-        run: echo 'ARTIFACTS=$(find "$directory" -type f -name "*.apk")' >> $GITHUB_ENV 
+        run: echo $(find "$directory" -type f -name "*.apk")
         
-      - name: Create Release
-        uses: ncipollo/release-action@v1
-        with:
-          tag: nightly-tag-${{ env.NOW }}
-          name: nightly-release-${{ env.NOW }}
-          body: Built automatically from https://github.com/zotero/zotero-android
-          artifacts: ${{ env.ARTIFACTS }}
+      # - name: Create Release
+      #   uses: ncipollo/release-action@v1
+      #   with:
+      #     tag: nightly-tag-${{ env.NOW }}
+      #     name: nightly-release-${{ env.NOW }}
+      #     body: Built automatically from https://github.com/zotero/zotero-android
